env: Refactor the Android driver wrapper exit code logic
To make it a little bit clearer.

--- a/releng/driver-wrapper-android.sh.in
+++ b/releng/driver-wrapper-android.sh.in
@@ -71,6 +71,8 @@ fi
 
 case $output_type in
   executable|shlib)
-    "@elf_cleaner@" "$output_path"
+    "@elf_cleaner@" "$output_path" || exit $?
     ;;
 esac
+
+exit 0
