unix: Fix hard-coded /bin/bash references

--- a/releng/driver-wrapper-android.sh.in
+++ b/releng/driver-wrapper-android.sh.in
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env bash
 
 # This wrapper script is necessary in order to avoid polluting the build
 # systems with Android-specific quirks.
