msvs: Factor out toolchain config
As `PlatformToolset` needs to be set early.

--- a/releng/frida-deps.vcxproj
+++ b/releng/frida-deps.vcxproj
@@ -42,6 +42,7 @@
     <ConfigurationType>Utility</ConfigurationType>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
+  <Import Project="$(SolutionDir)releng\frida-toolchain.props" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
